CODETOOLS-7902868: JOL: Rework JOL Samples for modern JDKs