@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, Oracle America, Inc.
+ * Copyright (c) 2020, Red Hat, Inc.
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -33,34 +33,70 @@ package org.openjdk.jol.samples;
 import org.openjdk.jol.info.ClassLayout;
 import org.openjdk.jol.vm.VM;
 
+import java.util.concurrent.TimeUnit;
+
 import static java.lang.System.out;
 
 /**
  * @author Aleksey Shipilev
  */
-public class JOLSample_25_ArrayAlignment {
+public class JOLSample_16_IHC_BL_Conflict {
 
     /*
-     * This sample showcases that the alignment requirements are also
-     * affecting arrays. This test introspects the byte[] arrays of different
-     * small sizes. It may be seen that many arrays are actually consuming the
-     * same space, since they are also required to be externally aligned.
+     * This is the example of biased locking conflicting with identity hash
+     * code. Identity hash code takes precedence.
      *
-     * The internal alignment can be demonstrated in some specific VM modes, e.g.
-     * on long[] arrays with 32-bit modes. There, the zero-th element of long[]
-     * array should be aligned by 8.
+     * In order to demonstrate this, we first need to sleep for >5 seconds
+     * to pass the grace period of biased locking. Then, we do the same
+     * trick as the example before. You may notice that the mark word
+     * had not changed after the first lock was released, retaining the bias.
      *
-     * Or, even on byte[] arrays in 64-bit mode with compressed references disabled,
-     * on some VMs:
-     *   https://bugs.openjdk.java.net/browse/JDK-8139457
+     * The identity hash code computation overwrites the biased locking information,
+     * and subsequent locks only displace it temporarily. After the second lock
+     * is released, identity hash code data gets back. No biased locking is
+     * possible for that object anymore.
+     *
+     * On JDK 15+, this test should enable -XX:+UseBiasedLocking.
      */
 
     public static void main(String[] args) throws Exception {
         out.println(VM.current().details());
-        out.println(ClassLayout.parseInstance(new long[0]).toPrintable());
-        for (int size = 0; size <= 8; size++) {
-            out.println(ClassLayout.parseInstance(new byte[size]).toPrintable());
+
+        TimeUnit.SECONDS.sleep(6);
+
+        final A a = new A();
+
+        ClassLayout layout = ClassLayout.parseInstance(a);
+
+        out.println("**** Fresh object");
+        out.println(layout.toPrintable());
+
+        synchronized (a) {
+            out.println("**** With the lock");
+            out.println(layout.toPrintable());
         }
+
+        out.println("**** After the lock");
+        out.println(layout.toPrintable());
+
+        int hashCode = a.hashCode();
+        out.println("hashCode: " + Integer.toHexString(hashCode));
+        out.println();
+
+        out.println("**** After the hashcode");
+        out.println(layout.toPrintable());
+
+        synchronized (a) {
+            out.println("**** With the second lock");
+            out.println(layout.toPrintable());
+        }
+
+        out.println("**** After the second lock");
+        out.println(layout.toPrintable());
+    }
+
+    public static class A {
+        // no fields
     }
 
 }
